# notebooks

./: .gitignore  Dockerfile  Dockerfile.save  README.md  docker-compose.yml  notebooks  pyproject.toml  requirements.txt
custom/: custom.css
data/: nesgamedata.csv  quotejson.pickle  wallet.csv
jupyter/: jupyter_notebook_config.json
notebooks/: Data - Using Scrapy.ipynb  Learn - R.ipynb  MEVN.ipynb  Processing - Images with Thunder.ipynb  Project - Creating prediction model as a service using Flask and Docker.ipynb  Project - Famous People.ipynb  Project - Hadoop experiment.ipynb  Project - Using JavaScript & VueJS.ipynb  Spark - Connect to S3.ipynb  Visualization - Using D3js.ipynb
