[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "This repository contains my public notebooks and Docker image to run them."
authors = ["Jitse-Jan <code@jitsejan.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.110"
Scrapy = "^2.5.0"
selenium = "^3.141.0"
mrjob = "^0.7.4"
psycopg2 = "^2.9.1"
pyspark = "^3.1.2"
pyarrow = "^4.0.1"
nltk = "^3.6.2"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
